Fix off-center "Font Size" label for Note widget

--- a/styles/widgets/_widget.scss
+++ b/styles/widgets/_widget.scss
@@ -22,6 +22,7 @@ $widget-transition-duration: 250ms;
   }
   label {
     margin-bottom: 5px;
+    text-align: center;
     font-size: $font-size-xxxs;
   }
   input[type=search] {
